--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,167 +1,85 @@
-# ============================================================================
-# PRODUCTION PROFILE - streamingcandle
-# ============================================================================
+# Production Environment Configuration
+# Active profile: prod
 
-spring.application.name=consumer
-server.port=8081
-
-# ============================================================================
-# MONGODB CONFIGURATION - PRODUCTION
-# ============================================================================
-# TODO: Update with production MongoDB credentials
-spring.data.mongodb.uri=mongodb://localhost:27017/tradeIngestion
-spring.data.mongodb.auto-index-creation=true
-
-# ============================================================================
-# KAFKA CONFIGURATION - PRODUCTION
-# ============================================================================
-# CRITICAL: Update with actual production Kafka broker addresses
-spring.kafka.bootstrap-servers=13.203.60.173:9094
-
-# Consumer configuration
-spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.group-id=streamingcandle-production
-
-# Deserializers
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=com.kotsin.consumer.model
-spring.kafka.consumer.properties.spring.json.value.default.type=com.kotsin.consumer.model.TickData
-
-# Producer configuration
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-
-# CRITICAL FIX: Disable type headers to prevent ClassNotFoundException in consumers
-# This allows consumers to use their own class definitions without package conflicts
-spring.kafka.producer.properties.spring.json.add.type.headers=false
-
-# ============================================================================
-# KAFKA STREAMS CONFIGURATION - PRODUCTION
-# ============================================================================
-spring.kafka.streams.application-id=production-streamingcandle
-spring.kafka.streams.bootstrap-servers=localhost:9092
-spring.kafka.streams.client-id=streamingcandle-prod
-spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
-spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.support.serializer.JsonSerde
-spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model
-spring.kafka.streams.properties.auto.offset.reset=earliest
-
-# CRITICAL: Production state directory (must be persistent across restarts)
-# Ensure this directory exists and has proper permissions
+# Kafka Configuration (Production)
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
+spring.kafka.streams.application-id=unified-market-processor-prod
 spring.kafka.streams.state-dir=/var/lib/kafka-streams/streamingcandle
+
+# Processing Configuration (Production - Optimized)
 spring.kafka.streams.properties.processing.guarantee=exactly_once_v2
+spring.kafka.streams.properties.commit.interval.ms=1000
+spring.kafka.streams.properties.num.stream.threads=4
 
-# Production reliability configurations
-spring.kafka.streams.properties.commit.interval.ms=100
-spring.kafka.streams.properties.statestore.cache.max.bytes=10485760
-spring.kafka.streams.properties.session.timeout.ms=30000
-spring.kafka.streams.properties.heartbeat.interval.ms=3000
-spring.kafka.streams.properties.request.timeout.ms=40000
-spring.kafka.streams.properties.retry.backoff.ms=100
-spring.kafka.streams.properties.reconnect.backoff.ms=50
+# Input topics (Production)
+unified.input.topic.ticks=${INPUT_TOPIC_TICKS:forwardtesting-data}
+unified.input.topic.oi=${INPUT_TOPIC_OI:OpenInterest}
+unified.input.topic.orderbook=${INPUT_TOPIC_ORDERBOOK:Orderbook}
 
-# REAL-TIME OPTIMIZATION
-spring.kafka.streams.properties.linger.ms=5
-spring.kafka.streams.properties.batch.size=1024
-spring.kafka.streams.properties.buffer.memory=33554432
+# Output topics (Production)
+stream.outputs.candles.enabled=true
+stream.outputs.candles.1m=candle-complete-1m
+stream.outputs.candles.2m=candle-complete-2m
+stream.outputs.candles.5m=candle-complete-5m
+stream.outputs.candles.15m=candle-complete-15m
+stream.outputs.candles.30m=candle-complete-30m
 
-spring.kafka.streams.properties.spring.json.value.default.type=com.kotsin.consumer.model.TickData
+# Family aggregation (Production)
+stream.outputs.familyStructured.enabled=true
+stream.outputs.familyStructured.1m=family-structured-1m
+stream.outputs.familyStructured.2m=family-structured-2m
+stream.outputs.familyStructured.5m=family-structured-5m
+stream.outputs.familyStructured.15m=family-structured-15m
+stream.outputs.familyStructured.30m=family-structured-30m
+stream.outputs.familyStructured.all=family-structured-all
 
-# ============================================================================
-# INFORMATION-DRIVEN BARS CONFIGURATION
-# Based on "Advances in Financial Machine Learning" Chapter 2
-# ============================================================================
+# MongoDB Configuration (Production)
+spring.data.mongodb.uri=${MONGODB_URI}
 
-# Enable all information bars
-information.bars.enabled=true
-
-# Multi-threshold approach (1x, 2x, 5x multipliers)
-# Creates 12 topics: VIB/DIB/TRB/VRB × 3 thresholds each
-information.bars.thresholds=1.0,2.0,5.0
-
-# VIB - Volume Imbalance Bars
-information.bars.vib.enabled=true
-information.bars.vib.min.ticks=10
-information.bars.vib.warmup.samples=20
-
-# DIB - Dollar Imbalance Bars  
-information.bars.dib.enabled=true
-information.bars.dib.min.ticks=10
-information.bars.dib.warmup.samples=20
-
-# TRB - Tick Runs Bars
-information.bars.trb.enabled=true
-information.bars.trb.min.ticks=10
-information.bars.trb.warmup.samples=20
-
-# VRB - Volume Runs Bars
-information.bars.vrb.enabled=true
-information.bars.vrb.min.ticks=10
-information.bars.vrb.warmup.samples=20
-
-# EWMA parameters for adaptive thresholding
-information.bars.ewma.span=100.0
-
-# Minimum expected volume (prevents division by zero during warmup)
-information.bars.min.expected.volume=100.0
-
-# Expected bar size for runs bars (TRB/VRB)
-information.bars.expected.bar.size=50.0
-
-# ============================================================================
-# KAFKA TOPICS - PRODUCTION
-# ============================================================================
-information.bars.input.topic=forwardtesting-data
-information.bars.vib.output.topic=volume-imbalance-bars
-information.bars.dib.output.topic=dollar-imbalance-bars
-information.bars.trb.output.topic=tick-runs-bars
-information.bars.vrb.output.topic=volume-runs-bars
-
-# ============================================================================
-# MICROSTRUCTURE FEATURES CONFIGURATION
-# Based on "Advances in Financial Machine Learning" Chapter 19
-# ============================================================================
-
-# Enable microstructure feature calculation
-microstructure.enabled=true
-
-# Kafka topics
-microstructure.input.topic=Orderbook
-microstructure.output.topic=microstructure-features
-
-# Rolling window configuration
-microstructure.window.size=50
-microstructure.min.observations=20
-
-# Emission strategy - emit features every 1 second
-microstructure.emit.interval.ms=1000
-
-# ============================================================================
-# LOGGING - PRODUCTION
-# ============================================================================
-logging.level.com.kotsin=INFO
+# Logging Configuration (Production - Info level)
+logging.level.com.kotsin.consumer=INFO
 logging.level.org.apache.kafka.streams=WARN
 logging.level.org.springframework.kafka=WARN
-
-# Log to file in production
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 logging.file.name=/var/log/streamingcandle/application.log
 logging.file.max-size=100MB
 logging.file.max-history=30
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
-logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
-# ============================================================================
-# PRODUCTION OPTIMIZATION
-# ============================================================================
+# Trading Hours (Production)
+trading.hours.nse.start=09:15
+trading.hours.nse.end=15:30
+trading.hours.mcx.start=09:00
+trading.hours.mcx.end=23:30
+trading.hours.buffer.minutes=15
 
-# Thread pool for processors
-spring.task.execution.pool.core-size=4
-spring.task.execution.pool.max-size=8
-spring.task.execution.pool.queue-capacity=100
+# Backpressure (Production - Strict)
+kafka.streams.backpressure.enabled=true
+kafka.streams.backpressure.max.poll.records=100
+kafka.streams.backpressure.lag.threshold=1000
+kafka.streams.backpressure.throttle.factor=0.5
 
-# JVM optimizations (set in startup script or systemd service)
-# -Xms2g -Xmx4g -XX:+UseG1GC -XX:MaxGCPauseMillis=20
-# -XX:+UseStringDeduplication -XX:+ParallelRefProcEnabled
+# Monitoring (Production)
+management.endpoints.web.exposure.include=health,metrics,info,prometheus
+management.endpoint.health.show-details=when-authorized
+management.metrics.export.prometheus.enabled=true
 
-spring.kafka.streams.application-id=unified-market-processor1
+# Feature Flags (Production)
+features.circuit-breaker.enabled=true
+features.audit-logging.enabled=true
+features.performance-profiling.enabled=false
+
+# Security (Production)
+server.port=8080
+server.ssl.enabled=false
+management.server.port=8081
+
+# Resilience (Production)
+spring.kafka.streams.properties.max.poll.records=100
+spring.kafka.streams.properties.max.poll.interval.ms=300000
+spring.kafka.streams.properties.session.timeout.ms=30000
+spring.kafka.streams.properties.heartbeat.interval.ms=3000
+
+# Performance (Production)
+spring.kafka.streams.properties.buffered.records.per.partition=1000
+spring.kafka.streams.properties.cache.max.bytes.buffering=10485760
+spring.kafka.streams.properties.rocksdb.config.setter=org.apache.kafka.streams.state.RocksDBConfigSetter
