--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -83,3 +83,17 @@ spring.kafka.streams.properties.heartbeat.interval.ms=3000
 spring.kafka.streams.properties.buffered.records.per.partition=1000
 spring.kafka.streams.properties.cache.max.bytes.buffering=10485760
 spring.kafka.streams.properties.rocksdb.config.setter=org.apache.kafka.streams.state.RocksDBConfigSetter
+
+# State Store Resilience (CRITICAL FIX for OffsetOutOfRangeException)
+# Enable standby replicas for automatic failover
+spring.kafka.streams.properties.num.standby.replicas=1
+# Acceptable recovery lag for standby replicas
+spring.kafka.streams.properties.acceptable.recovery.lag=10000
+# State store cache configuration
+spring.kafka.streams.properties.statestore.cache.max.bytes=104857600
+
+# Changelog Topic Configuration (matches state store retention)
+# NOTE: Changelog topics should be created with these settings:
+# - retention.ms=604800000 (7 days)
+# - cleanup.policy=compact,delete
+# - min.compaction.lag.ms=86400000 (1 day)
