--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -80,3 +80,20 @@ stream.outputs.familyStructured.30m=family-structured-30m
 
 # Family-structured ALL
 stream.outputs.familyStructured.all=family-structured-all
+
+# ============================================================================
+# LOGGING CONFIGURATION (Issue #13 Fix)
+# ============================================================================
+# Root log level
+logging.level.root=INFO
+
+# Application logs
+logging.level.com.kotsin.consumer=INFO
+
+# Kafka Streams (reduce noise)
+logging.level.org.apache.kafka.streams=WARN
+logging.level.org.springframework.kafka=WARN
+
+# DEBUG only for specific troubleshooting (comment out in production)
+# logging.level.com.kotsin.consumer.processor.service.CandleEmissionService=DEBUG
+# logging.level.com.kotsin.consumer.processor.service.InstrumentStateManager=DEBUG
