--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -95,5 +95,5 @@ logging.level.org.apache.kafka.streams=WARN
 logging.level.org.springframework.kafka=WARN
 
 # DEBUG only for specific troubleshooting (comment out in production)
-# logging.level.com.kotsin.consumer.processor.service.CandleEmissionService=DEBUG
-# logging.level.com.kotsin.consumer.processor.service.InstrumentStateManager=DEBUG
+# logging.level.com.kotsin.consumer.service.CandleEmissionService=DEBUG
+# logging.level.com.kotsin.consumer.service.InstrumentStateManager=DEBUG
