--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,6 +61,12 @@ unified.input.topic.ticks=forwardtesting-data
 unified.input.topic.oi=OpenInterest
 unified.input.topic.orderbook=Orderbook
 
+# ✅ P2-2 FIX: Windowing configuration (externalized from hardcoded values)
+# Grace period: how long to wait for late-arriving data after window closes
+# Trade-off: Higher grace = more complete data but higher latency
+# 30 seconds captures 95%+ of late data without excessive delay
+unified.streams.window.grace.period.seconds=30
+
 # Finalized candle topics
 stream.outputs.candles.enabled=true
 stream.outputs.candles.1m=candle-complete-1m
