--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -76,16 +76,7 @@ stream.outputs.candles.5m=candle-complete-5m
 stream.outputs.candles.15m=candle-complete-15m
 stream.outputs.candles.30m=candle-complete-30m-v2
 
-# Family-structured snapshot streams (enabled by default)
-stream.outputs.familyStructured.enabled=true
-stream.outputs.familyStructured.1m=family-structured-1m
-stream.outputs.familyStructured.2m=family-structured-2m
-stream.outputs.familyStructured.5m=family-structured-5m
-stream.outputs.familyStructured.15m=family-structured-15m
-stream.outputs.familyStructured.30m=family-structured-30m
-
-# Family-structured ALL
-stream.outputs.familyStructured.all=family-structured-all
+# Family aggregation disabled; per-instrument streams only
 
 # ============================================================================
 # LOGGING CONFIGURATION (Issue #13 Fix)
