--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,8 +23,8 @@ spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serial
 spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.support.serializer.JsonSerde
 spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model
 
-# Offset reset - consume from earliest
-spring.kafka.streams.properties.auto.offset.reset=earliest
+# Offset reset - consume from latest
+spring.kafka.streams.properties.auto.offset.reset=latest
 
 # Processing guarantee (at_least_once or exactly_once_v2)
 spring.kafka.streams.properties.processing.guarantee=at_least_once
