--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,11 +28,12 @@ spring.kafka.streams.properties.auto.offset.reset=latest
 
 # Processing guarantee (at_least_once or exactly_once_v2)
 spring.kafka.streams.properties.processing.guarantee=at_least_once
+spring.kafka.streams.properties.replication.factor=1
 
 # Performance tuning
 spring.kafka.streams.properties.commit.interval.ms=100
 spring.kafka.streams.properties.statestore.cache.max.bytes=104857600
-spring.kafka.streams.properties.num.stream.threads=2
+spring.kafka.streams.properties.num.stream.threads=3
 spring.kafka.streams.properties.session.timeout.ms=30000
 spring.kafka.streams.properties.heartbeat.interval.ms=3000
 spring.kafka.streams.properties.request.timeout.ms=40000
