--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -78,6 +78,7 @@ stream.outputs.candles.15m=candle-complete-15m
 stream.outputs.candles.30m=candle-complete-30m-v2
 
 # Family aggregation disabled; per-instrument streams only
+stream.outputs.familyStructured.enabled=false
 
 # ============================================================================
 # LOGGING CONFIGURATION (Issue #13 Fix)
