--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,7 @@ spring.profiles.active=production
 spring.application.name=streamingcandle
 server.port=8081
 
-# ============================================================================
-# MONGODB CONFIGURATION
-# ============================================================================
-spring.data.mongodb.uri=mongodb://localhost:27017/tradeIngestion
-spring.data.mongodb.auto-index-creation=true
+
 
 # ============================================================================
 # KAFKA STREAMS CONFIGURATION
@@ -24,7 +20,7 @@ spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.su
 spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model
 
 # Offset reset - consume from latest
-spring.kafka.streams.properties.auto.offset.reset=latest
+spring.kafka.streams.properties.auto.offset.reset=earliest
 
 # Processing guarantee (at_least_once or exactly_once_v2)
 spring.kafka.streams.properties.processing.guarantee=at_least_once
