--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,9 +12,9 @@ spring.kafka.streams.properties.commit.interval.ms=1000
 spring.kafka.streams.properties.num.stream.threads=4
 
 # Input topics (Production)
-unified.input.topic.ticks=${INPUT_TOPIC_TICKS:forwardtesting-data}
-unified.input.topic.oi=${INPUT_TOPIC_OI:OpenInterest}
-unified.input.topic.orderbook=${INPUT_TOPIC_ORDERBOOK:Orderbook}
+unified.input.topic.ticks=forwardtesting-data
+unified.input.topic.oi=OpenInterest
+unified.input.topic.orderbook=Orderbook
 
 # Output topics (Production)
 stream.outputs.candles.enabled=true
@@ -23,15 +23,6 @@ stream.outputs.candles.2m=candle-complete-2m
 stream.outputs.candles.5m=candle-complete-5m
 stream.outputs.candles.15m=candle-complete-15m
 stream.outputs.candles.30m=candle-complete-30m
-
-# Family aggregation (Production)
-stream.outputs.familyStructured.enabled=true
-stream.outputs.familyStructured.1m=family-structured-1m
-stream.outputs.familyStructured.2m=family-structured-2m
-stream.outputs.familyStructured.5m=family-structured-5m
-stream.outputs.familyStructured.15m=family-structured-15m
-stream.outputs.familyStructured.30m=family-structured-30m
-stream.outputs.familyStructured.all=family-structured-all
 
 # MongoDB Configuration (Production)
 spring.data.mongodb.uri=${MONGODB_URI}
@@ -97,3 +88,6 @@ spring.kafka.streams.properties.statestore.cache.max.bytes=104857600
 # - retention.ms=604800000 (7 days)
 # - cleanup.policy=compact,delete
 # - min.compaction.lag.ms=86400000 (1 day)
+
+
+
