--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # DEFAULT PROFILE = PRODUCTION
-spring.profiles.active=production
+# Default to replay profile unless overridden
+spring.profiles.default=replay
 
 spring.application.name=streamingcandle
 server.port=8081
