--- a/src/main/resources/application-replay.properties
+++ b/src/main/resources/application-replay.properties
@@ -7,3 +7,6 @@ unified.input.topic.oi=OpenInterest-replay
 # Optional: slightly larger grace to tolerate minor out-of-order in replay
 # unified.streams.window.grace.period.seconds=10
 
+# Enable in-process replay copy runner
+replay.copy.enabled=true
+replay.auto.create.topics=true
