--- a/src/main/resources/application-replay.properties
+++ b/src/main/resources/application-replay.properties
@@ -10,3 +10,11 @@ unified.input.topic.oi=OpenInterest-replay
 # Enable in-process replay copy runner
 replay.copy.enabled=true
 replay.auto.create.topics=true
+
+# Enable bulk sorting replayer (consumes all, sorts by event time, emits)
+replay.sort.bulk.enabled=true
+replay.sort.bulk.max.idle.ms=3000
+
+# Restrict to a single day (ISO date) in a timezone (used to compute [startOfDay, nextDay) epoch ms)
+replay.sort.date=2025-10-21
+replay.sort.zone=Asia/Kolkata
