--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # DEFAULT PROFILE = PRODUCTION
 # Default to replay profile unless overridden
-spring.profiles.default=replay
+spring.profiles.default=production
 
 spring.application.name=streamingcandle
 server.port=8081
@@ -11,7 +11,7 @@ server.port=8081
 # KAFKA STREAMS CONFIGURATION
 # ============================================================================
 spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.streams.application-id=unified-market-processor2
+spring.kafka.streams.application-id=unified-market-processor
 spring.kafka.streams.client-id=streamingcandle
 spring.kafka.streams.state-dir=/tmp/kafka-streams/${spring.application.name}
 
@@ -21,7 +21,7 @@ spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.su
 spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model
 
 # Offset reset - consume from latest
-spring.kafka.streams.properties.auto.offset.reset=earliest
+spring.kafka.streams.properties.auto.offset.reset=latest
 
 # Processing guarantee (at_least_once or exactly_once_v2)
 spring.kafka.streams.properties.processing.guarantee=at_least_once
