--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -90,6 +90,7 @@ logging.level.com.kotsin.consumer=INFO
 logging.level.org.apache.kafka.streams=WARN
 logging.level.org.springframework.kafka=WARN
 
+trading.hours.validation.enabled=false
 # DEBUG only for specific troubleshooting (comment out in production)
 # logging.level.com.kotsin.consumer.service.CandleEmissionService=DEBUG
 # logging.level.com.kotsin.consumer.service.InstrumentStateManager=DEBUG
