--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.su
 spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model
 
 # Offset reset - consume from latest
-spring.kafka.streams.properties.auto.offset.reset=latest
+spring.kafka.streams.properties.auto.offset.reset=earliest
 
 # Processing guarantee (at_least_once or exactly_once_v2)
 spring.kafka.streams.properties.processing.guarantee=at_least_once
