--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -12,7 +12,7 @@ spring.data.mongodb.auto-index-creation=true
 # ============================================================================
 # REMOTE KAFKA CONFIGURATION
 # ============================================================================
-spring.kafka.bootstrap-servers=13.203.60.173:9094
+spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.group-id=streamingcandle-local-test-group
 
@@ -34,7 +34,7 @@ spring.kafka.producer.properties.spring.json.add.type.headers=false
 # Kafka Streams Configuration - LOCAL TESTING
 # ============================================================================
 spring.kafka.streams.application-id=local-information-bars-test
-spring.kafka.streams.bootstrap-servers=13.203.60.173:9094
+spring.kafka.streams.bootstrap-servers=localhost:9092
 spring.kafka.streams.client-id=streamingcandle-local
 spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
 spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.support.serializer.JsonSerde
