--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,7 +2,7 @@
 # Uses remote Kafka broker for integration testing
 
 # Kafka Bootstrap Servers - Remote Broker
-spring.kafka.bootstrap-servers=13.203.60.173:9094
+spring.kafka.bootstrap-servers=localhost:9092
 
 # Kafka Streams Configuration
 spring.kafka.streams.application-id=unified-market-processor2-test
