--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 # Default Test Configuration (Override with profile-specific files)
 # Remote Kafka Broker
-spring.kafka.bootstrap-servers=13.203.60.173:9094
+spring.kafka.bootstrap-servers=localhost:9092
 
 # Application Name
 spring.application.name=streamingcandle-test
