--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,8 +62,30 @@ unified.input.topic.orderbook=Orderbook
 # ✅ P2-2 FIX: Windowing configuration (externalized from hardcoded values)
 # Grace period: how long to wait for late-arriving data after window closes
 # Trade-off: Higher grace = more complete data but higher latency
-# 30 seconds captures 95%+ of late data without excessive delay
-unified.streams.window.grace.period.seconds=30
+# Note: With separate window aggregations per stream, this can be smaller (10s)
+unified.streams.window.grace.period.seconds=10
+
+# Intermediate topics (separate window aggregations per stream)
+stream.intermediate.ohlcv.1m=intermediate-ohlcv-1m
+stream.intermediate.ohlcv.2m=intermediate-ohlcv-2m
+stream.intermediate.ohlcv.3m=intermediate-ohlcv-3m
+stream.intermediate.ohlcv.5m=intermediate-ohlcv-5m
+stream.intermediate.ohlcv.15m=intermediate-ohlcv-15m
+stream.intermediate.ohlcv.30m=intermediate-ohlcv-30m
+
+stream.intermediate.orderbook.1m=intermediate-orderbook-1m
+stream.intermediate.orderbook.2m=intermediate-orderbook-2m
+stream.intermediate.orderbook.3m=intermediate-orderbook-3m
+stream.intermediate.orderbook.5m=intermediate-orderbook-5m
+stream.intermediate.orderbook.15m=intermediate-orderbook-15m
+stream.intermediate.orderbook.30m=intermediate-orderbook-30m
+
+stream.intermediate.oi.1m=intermediate-oi-1m
+stream.intermediate.oi.2m=intermediate-oi-2m
+stream.intermediate.oi.3m=intermediate-oi-3m
+stream.intermediate.oi.5m=intermediate-oi-5m
+stream.intermediate.oi.15m=intermediate-oi-15m
+stream.intermediate.oi.30m=intermediate-oi-30m
 
 # Finalized candle topics
 stream.outputs.candles.enabled=true
