--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,8 @@ spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serial
 spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.support.serializer.JsonSerde
 spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model
 
-# Offset reset - consume from latest
-spring.kafka.streams.properties.auto.offset.reset=earliest
+# Offset reset - consume from latest (skip old problematic data)
+spring.kafka.streams.properties.auto.offset.reset=latest
 
 # Processing guarantee (at_least_once or exactly_once_v2)
 spring.kafka.streams.properties.processing.guarantee=at_least_once
@@ -43,8 +43,9 @@ spring.kafka.streams.properties.buffer.memory=33554432
 # Topology optimization
 spring.kafka.streams.properties.topology.optimization=all
 
-# Deserialization exception handler
+# Exception handlers - skip bad records instead of crashing
 spring.kafka.streams.properties.default.deserialization.exception.handler=org.apache.kafka.streams.errors.LogAndContinueExceptionHandler
+spring.kafka.streams.properties.default.production.exception.handler=org.apache.kafka.streams.errors.LogAndContinueProductionExceptionHandler
 
 # Producer timestamp type
 spring.kafka.streams.properties.producer.message.timestamp.type=CreateTime
