--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.su
 spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model
 
 # Offset reset - consume from latest (skip old problematic data)
-spring.kafka.streams.properties.auto.offset.reset=latest
+spring.kafka.streams.properties.auto.offset.reset=earliest
 
 # Processing guarantee (at_least_once or exactly_once_v2)
 spring.kafka.streams.properties.processing.guarantee=at_least_once
@@ -63,8 +63,14 @@ unified.input.topic.orderbook=Orderbook
 # ✅ P2-2 FIX: Windowing configuration (externalized from hardcoded values)
 # Grace period: how long to wait for late-arriving data after window closes
 # Trade-off: Higher grace = more complete data but higher latency
-# Note: With separate window aggregations per stream, this can be smaller (10s)
-unified.streams.window.grace.period.seconds=10
+# NOTE: 1m candles are delayed by this amount due to suppression until window closes.
+# Configure per-timeframe:
+candles.window.grace.seconds.1m=5
+candles.window.grace.seconds.multi=10
+
+# Testing: enable to process only a single instrument (by Token)
+candles.filter.enabled=true
+candles.filter.token=999920000
 
 # Intermediate topics (separate window aggregations per stream)
 stream.intermediate.ohlcv.1m=intermediate-ohlcv-1m
