--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,6 +72,8 @@ candles.window.grace.seconds.multi=10
 candles.filter.enabled=true
 candles.filter.token=999920000
 
+# OHLC always updates from price ticks; volume updates only when trade volume exists
+
 # Intermediate topics (separate window aggregations per stream)
 stream.intermediate.ohlcv.1m=intermediate-ohlcv-1m
 stream.intermediate.ohlcv.2m=intermediate-ohlcv-2m
