--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -70,7 +70,19 @@ candles.window.grace.seconds.multi=10
 
 # Testing: enable to process only a single instrument (by Token)
 candles.filter.enabled=true
-candles.filter.token=999920000
+candles.filter.token=123257
+
+# Orderbook filters and windowing
+orderbook.filter.enabled=true
+orderbook.filter.token=123257
+orderbook.window.grace.seconds.1m=5
+orderbook.window.grace.seconds.multi=10
+
+# Open Interest (options) filters and windowing
+oi.filter.enabled=true
+oi.filter.token=123257
+oi.window.grace.seconds.1m=5
+oi.window.grace.seconds.multi=10
 
 # OHLC always updates from price ticks; volume updates only when trade volume exists
 
