--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,6 +72,28 @@ candles.window.grace.seconds.multi=10
 candles.filter.enabled=true
 candles.filter.token=123257
 
+# VPIN configuration (dynamic)
+candles.vpin.initial.bucket.size=10000.0
+candles.vpin.adaptive.alpha=0.05
+candles.vpin.max.buckets=50
+
+# Imbalance thresholds and EWMA (adaptive)
+candles.imbalance.ewma.alpha=0.1
+candles.imbalance.initial.vib=1000.0
+candles.imbalance.initial.dib=100000.0
+candles.imbalance.initial.trb=10.0
+candles.imbalance.initial.vrb=5000.0
+
+# Trade classification thresholds
+candles.classify.min.absolute=0.01
+candles.classify.bps=0.0001
+candles.classify.spread.multiplier=0.15
+
+# Tick sizes
+candles.ticksize.default=0.05
+candles.ticksize.derivatives=0.05
+candles.imbalance.q.zscore=1.645
+
 # Orderbook filters and windowing
 orderbook.filter.enabled=true
 orderbook.filter.token=123257
