--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -105,6 +105,7 @@ oi.filter.enabled=true
 oi.filter.token=123257
 oi.window.grace.seconds.1m=5
 oi.window.grace.seconds.multi=10
+oi.value.scale=1.0
 
 # OHLC always updates from price ticks; volume updates only when trade volume exists
 
