--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -99,6 +99,13 @@ orderbook.filter.enabled=true
 orderbook.filter.token=123257
 orderbook.window.grace.seconds.1m=5
 orderbook.window.grace.seconds.multi=10
+orderbook.ticksize=0.05
+orderbook.spoof.size.threshold.ratio=0.3
+orderbook.spoof.confirmation.snapshots=2
+orderbook.lambda.min.observations=10
+orderbook.lambda.calc.frequency=5
+orderbook.lambda.ofi.epsilon=1.0
+orderbook.spoof.price.epsilon.ticks=1.0
 
 # Open Interest (options) filters and windowing
 oi.filter.enabled=true
@@ -106,6 +113,10 @@ oi.filter.token=123257
 oi.window.grace.seconds.1m=5
 oi.window.grace.seconds.multi=10
 oi.value.scale=1.0
+oi.scale.use.lots=false
+
+# MongoDB
+spring.data.mongodb.uri=mongodb://localhost:27017/tradeIngestion
 
 # OHLC always updates from price ticks; volume updates only when trade volume exists
 
