--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,7 +69,8 @@ candles.window.grace.seconds.1m=5
 candles.window.grace.seconds.multi=10
 
 # Testing: enable to process only a single instrument (by Token)
-candles.filter.enabled=true
+# Enable processing for all instruments by default
+candles.filter.enabled=false
 candles.filter.token=123257
 
 # VPIN configuration (dynamic)
@@ -95,7 +96,7 @@ candles.ticksize.derivatives=0.05
 candles.imbalance.q.zscore=1.645
 
 # Orderbook filters and windowing
-orderbook.filter.enabled=true
+orderbook.filter.enabled=false
 orderbook.filter.token=123257
 orderbook.window.grace.seconds.1m=5
 orderbook.window.grace.seconds.multi=10
@@ -108,7 +109,7 @@ orderbook.lambda.ofi.epsilon=1.0
 orderbook.spoof.price.epsilon.ticks=1.0
 
 # Open Interest (options) filters and windowing
-oi.filter.enabled=true
+oi.filter.enabled=false
 oi.filter.token=123257
 oi.window.grace.seconds.1m=5
 oi.window.grace.seconds.multi=10
