--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,7 +8,7 @@ spring.kafka.streams.state-dir=/var/lib/kafka-streams/streamingcandle
 
 # Processing Configuration (Production - Optimized)
 spring.kafka.streams.properties.processing.guarantee=exactly_once_v2
-spring.kafka.streams.properties.commit.interval.ms=1000
+spring.kafka.streams.properties.commit.interval.ms=250
 spring.kafka.streams.properties.num.stream.threads=1
 
 # Input topics (Production)
@@ -89,5 +89,14 @@ spring.kafka.streams.properties.statestore.cache.max.bytes=104857600
 # - cleanup.policy=compact,delete
 # - min.compaction.lag.ms=86400000 (1 day)
 
+
+# Low-latency window grace overrides (Production)
+# Finalized bars flush within ~grace + commit interval after window end
+candles.window.grace.seconds.1m=2
+candles.window.grace.seconds.multi=2
+orderbook.window.grace.seconds.1m=2
+orderbook.window.grace.seconds.multi=2
+oi.window.grace.seconds.1m=2
+oi.window.grace.seconds.multi=2
 
 
