--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,6 +4,7 @@
 # Kafka Configuration (Production)
 spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
 spring.kafka.streams.application-id=unified-market-processor-prod1
+spring.kafka.streams.properties.auto.offset.reset=latest
 spring.kafka.streams.state-dir=/var/lib/kafka-streams/streamingcandle
 
 # Processing Configuration (Production - Optimized)
@@ -98,5 +99,4 @@ orderbook.window.grace.seconds.1m=2
 orderbook.window.grace.seconds.multi=2
 oi.window.grace.seconds.1m=2
 oi.window.grace.seconds.multi=2
-
 
