--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -93,9 +93,10 @@ spring.kafka.streams.properties.statestore.cache.max.bytes=104857600
 
 # Low-latency window grace overrides (Production)
 # Finalized bars flush within ~grace + commit interval after window end
-candles.window.grace.seconds.1m=10
-candles.window.grace.seconds.multi=10
-orderbook.window.grace.seconds.1m=10
-orderbook.window.grace.seconds.multi=10
-oi.window.grace.seconds.1m=10
-oi.window.grace.seconds.multi=10
+# OPTIMIZED: Reduced to 2s for live data low-latency processing
+candles.window.grace.seconds.1m=2
+candles.window.grace.seconds.multi=2
+orderbook.window.grace.seconds.1m=2
+orderbook.window.grace.seconds.multi=2
+oi.window.grace.seconds.1m=2
+oi.window.grace.seconds.multi=2
