--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,8 +65,9 @@ unified.input.topic.orderbook=Orderbook
 # Trade-off: Higher grace = more complete data but higher latency
 # NOTE: 1m candles are delayed by this amount due to suppression until window closes.
 # Configure per-timeframe:
-candles.window.grace.seconds.1m=5
-candles.window.grace.seconds.multi=10
+# OPTIMIZED FOR LIVE DATA: Reduced from 5s/10s to 2s for low latency
+candles.window.grace.seconds.1m=2
+candles.window.grace.seconds.multi=2
 
 # Testing: enable to process only a single instrument (by Token)
 # Enable processing for all instruments by default
